# milestone-project-2-victoria

./: .coverage  .pre-commit-config.yaml  Makefile  README.md  config.py  game.py  game_config.py  mypy.ini  pyproject.toml
blackjack/: actions.py  card.py  chips.py  constants.py  deck.py  game.py  hand.py  results.py
methods/: card.py  deck.py
tests/: conftest.py  test_actions.py  test_card.py  test_chips.py  test_deck.py  test_hand.py  test_results.py
