[tool.poetry]
name = "milestone-project-2-victoria"
version = "0.1.0"
description = ""
authors = ["victoria.beardow1 <victoria.beardow1@nhs.net>"]
readme = "README.md"
packages = [{include = "milestone_project_2_victoria"}]

[tool.poetry.dependencies]
python = "^3.10"
pylint = "^2.15.5"
black = "^22.10.0"
mypy = "^0.982"
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
